src/scss/components/_equipment.scss
.equipment-item {
    background-color: $base-2;
    border-radius: 0.75rem;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    // padding: 50px 24px 20px 24px;
    padding: 3.125rem 1.5rem 1.25rem;
    position: relative;
    &__amount {
        @include text_t2;
        position: absolute;
        top: 1.5rem; //24px;
        right: 1.5rem; //
    }
    &__img {
        position: relative;
        padding-bottom: calc(316/332 * 100%);
        margin: 0 0 2.125rem;
        width: 100%;
        height: 0;
        img {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            object-fit: contain;
            mix-blend-mode: darken;
            transition: transform 0.2s ease 0s
        }
    }
    &__video {
        position: relative;
        padding-bottom: calc(316/332 * 100%);
        margin: 0 0 2.125rem;
        width: 100%;
        height: 0;
        overflow: hidden;
        video {
            position: absolute;
            top: 50%;
            left: 50%;
            width: 120%;
            height: 120%;
            transform: translate(-50%, -50%);
            object-fit: contain;
            // mix-blend-mode: darken;
            // transition: transform 0.2s ease 0s
        }
    }
    &__name {
        @include text_t2;
        margin: auto 0 0;
        text-transform: lowercase;
        @include min_gap {
            max-width: 246px;
        }
    }
    @include ishover {
        .equipment-item__img {
            img {
                transform: scale(1.05);
            }
        }
    }
    @include min_container {
        &__name {
            width: 75%;
            max-width: none;
        }
    }
}

